--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.cdnfonts.com/css/games');
 @import url('https://fonts.googleapis.com/css2?family=Cairo&display=swap');
 .welcome{
-    background-image: url("solarSystem.jpg");
+    background-image: url("Images/solarSystem.jpg");
     top: 0; bottom: 0;
     left: 0; right: 0;
     height: 100%;
