--- a/src/Game/Rules/Rules.css
+++ b/src/Game/Rules/Rules.css
@@ -1,6 +1,6 @@
 .mainRef{
     font-family: Games;
-    background-image: url("../../solarSystem.jpg");
+    background-image: url("../../Images/solarSystem.jpg");
     filter: ;
     height: 100%;
     width: 100%;
