--- a/src/Ranking/Ranking.css
+++ b/src/Ranking/Ranking.css
@@ -3,7 +3,7 @@
     font-family: Cairo;
     font-size: large;
     font-weight: bold;
-    background-image: url("../solarSystem.jpg");
+    background-image: url("../Images/solarSystem.jpg");
     position: fixed;
     height: 100%;
     width: 100%;
