--- a/src/Game/GamePage/GameKonva.css
+++ b/src/Game/GamePage/GameKonva.css
@@ -1,5 +1,5 @@
 .gameKonva{
-    background-image: url("../Images/solarSystem.jpg");
+    background-image: url("../../Images/solarSystem.jpg");
     position: fixed;
     top: 0;
     left: 0;
