--- a/src/nav-bar/nav-bar.css
+++ b/src/nav-bar/nav-bar.css
@@ -26,6 +26,10 @@ ul{
 .l label{
     cursor: pointer;
 }
+a{
+    color: lavender;
+    text-decoration: none;
+}
 
 @keyframes shake {
     0% { transform: translate(1px, 1px) rotate(0deg); }
