--- a/src/Ranking/Ranking.css
+++ b/src/Ranking/Ranking.css
@@ -31,7 +31,7 @@
     justify-content: center;
     text-align: center;
 }
-.first, .second, .third{
+.first, .second, .third, .You{
     color: beige;
     margin-top: 10px;
 }
@@ -47,14 +47,22 @@
     animation: shake 2s;
     animation-iteration-count: infinite;
 }
-.first, .second, .third{
+.You:hover{
+    animation: shake 2s;
+    animation-iteration-count: infinite;
+}
+.first, .second, .third, .You{
     background-color: rgba(100, 100, 100, 0.3);
     border-radius: 5px;
     display: block;
     padding-left: 5px;
-    padding-top: 15px;
-    height: 50px;
     cursor: pointer;
+}
+.first, .second, .third{
+    height: 50px;
+    padding-top: 15px;
+}
+.You{;
 }
 
 @keyframes shake {
